--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>ms-data-core-api</artifactId>
-            <version>0.11-SNAPSHOT</version>
+            <version>0.11.1</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
