--- a/pride-chart/branches/pride-chart-1.0/pom.xml
+++ b/pride-chart/branches/pride-chart-1.0/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>ms-data-core-api</artifactId>
             <version>0.11.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.3.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
