--- a/pride-chart/branches/pride-chart-1.0/pom.xml
+++ b/pride-chart/branches/pride-chart-1.0/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>uk.ac.ebi.pride</groupId>
     <artifactId>pride-chart</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
 
     <licenses>
         <license>
@@ -50,11 +50,6 @@
     </developers>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>xerces</groupId>-->
-            <!--<artifactId>xercesImpl</artifactId>-->
-            <!--<version>2.7.1</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>jfree</groupId>
             <artifactId>jfreechart</artifactId>
@@ -126,20 +121,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <!-- comment exclusion section out if want to run batch dbtest -->
-                    <excludes>
-                        <exclude>**/test</exclude>
-                        <exclude>**/test/*.class</exclude>
-                    </excludes>
                     <archive>
                         <manifest>
-                            <!--provide a CLI for jmztab-->
-                            <!--<mainClass>uk.ac.ebi.pride.jmztab.MZTabCommandLine</mainClass>-->
-                            <!--export prideq to mztab for unique-->
-                            <mainClass>uk.ac.ebi.pride.jmztab.prideq.PrideqExportRun</mainClass>
-                            <!--provide a simple GUI for jmztab-->
-                            <!--<mainClass>uk.ac.ebi.pride.jmztab.MZTabInspector</mainClass>-->
-
+                            <!--export a JSON string -->
+                            <mainClass>uk.ac.ebi.pride.chart.io.PrideJSONWriterRun</mainClass>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib</classpathPrefix>
                         </manifest>
