--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>ms-data-core-api</artifactId>
-            <version>0.11.3</version>
+            <version>0.11.4</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
@@ -89,9 +89,9 @@
             <version>1.0.12-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.pride.chart</groupId>
+            <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>pride-chart</artifactId>
-            <version>0.2.37</version>
+            <version>1.0.4-SNAPSHOT</version>
         </dependency>
         <!-- javaHelp -->
         <dependency>
