--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -154,6 +154,13 @@
             <version>0.1.0</version>
         </dependency>
 
+        <!--json-->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.9</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
