--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>pride-mzgraph-browser</artifactId>
-            <version>1.0.13-SNAPSHOT</version>
+            <version>1.0.13</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
