--- a/pride-inspector/branches/development/pom.xml
+++ b/pride-inspector/branches/development/pom.xml
@@ -4,7 +4,7 @@
     <groupId>uk.ac.ebi.pride.gui</groupId>
     <artifactId>pride-inspector</artifactId>
     <packaging>jar</packaging>
-    <version>1.3.0</version>
+    <version>1.3.1</version>
     <name>pride-inspector</name>
     <url>http://code.google.com/p/pride-toolsuite/wiki/PRIDEInspector</url>
 
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.2.1</version>
+            <version>4.2.5</version>
         </dependency>
         <!-- javaHelp -->
         <dependency>
@@ -290,9 +290,9 @@
                     </excludes>
                     <archive>
                         <manifest>
-                            <mainClass>uk.ac.ebi.pride.gui.PrideInspectorBootstrap</mainClass>
+                            <!--<mainClass>uk.ac.ebi.pride.gui.PrideInspectorBootstrap</mainClass>-->
                             <!--use this if want to extract metadata from public mysql instance-->
-                            <!--<mainClass>uk.ac.ebi.pride.data.io.db.DBMetadataExtractor</mainClass>-->
+                            <mainClass>uk.ac.ebi.pride.data.io.db.DBMetadataExtractor</mainClass>
                             <!--use this if want to run batch dbtest-->
                             <!--<mainClass>uk.ac.ebi.pride.dbtestst.FileControllerBatchTest</mainClass>-->
                             <addClasspath>true</addClasspath>
