--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>ms-data-core-api</artifactId>
-            <version>0.11.7</version>
+            <version>0.11.9-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -196,7 +196,7 @@
 
         <dependency>
             <groupId>uk.ac.ebi.pride.prider</groupId>
-            <artifactId> prider-data-provider-api</artifactId>
+            <artifactId>prider-data-provider-api</artifactId>
             <version>1.0</version>
         </dependency>
 
