--- a/ms-data-core-api/trunk/pom.xml
+++ b/ms-data-core-api/trunk/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>uk.ac.ebi.pride</groupId>
     <artifactId>ms-data-core-api</artifactId>
-    <version>0.11.15-SNAPSHOT</version>
+    <version>0.11.16-SNAPSHOT</version>
+    <name>Open-source Data Model for computational proteomics</name>
 
 
     <licenses>
@@ -114,6 +115,12 @@
             <artifactId>pkl-parser</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>apl-parser</artifactId>
+            <version>1.3.4-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>uk.ac.ebi.pride.tools</groupId>
             <artifactId>dta-parser</artifactId>
